Changes for 1.3:

 - added support of "ayatem.swap.out" key for Linux with kernel 2.4 (Eugene)
 - added support of "ayatem.swap.in" key for Linux with kernel 2.4 (Eugene)
 - fixed "web.page.*" keys (Eugene)
 - added startup script for Fedora Core 5. Thanks to Mark Moses. (Alexei)
 - fixed md5sum calculation (Eugene)
 - added support of LDAP services monitoring for Win32 (Eugene)
 - added support of "net.tcp.service.perf" for Win32 (Eugene)
 - added support of "net.tcp.service" for Win32 (Eugene)
 - fixed NTP protocol monitoring (Eugene)
 - new more efficient definition of function DBexecute() (Alexei)
 - new more efficient definition of function DBselect() (Alexei)
 - removed stat file using (Eugene)
 - intergeated Win32 and Linux sources of ZABBIX agent (Eugene)
 - fixed selection popup if return string contains single quote (Alexei)
 - fixed incorrect character in item key selector (Alexei)
 - fixed processing of SNMP having non-standard port (Alexei)
 - fixed database data to get rid of zero multiplier for disk spaces (Alexei)
 - misc fixes for WEB frontend (Alexei)
 - fixed srv_status.php: Cannot use object of type CLink ... (Alexei)
 - fixed processing of web.page.get and long data sent by agent (Alexei)
 - fixed B64 en-decoding of large data (Alexei)
 - fixed problem with undefined PACKETSZ under Mac OS/X (Alexei)
 - disabled excessive debug printing for system.run (Alexei)
 - umask(022) changed to umask(002) (Alexei)
 - added additional symbols for trigger expressions (slash, space) (Alexei)
 - changed type of lastlogsize to long in structure METRIC (Alexei)
 - ZABBIX agent to bind even if TIME_WAIT sockets exist (Alexei)
 - ZABBIX server to bind even if TIME_WAIT sockets exist (Alexei)
 - fixed notification report for Oracle (Eugene)
 - fixed large history of alarms displaying (Eugene)
 - fixed value mapping for latest data (Eugene)
 - fixed value mapping for screens (Eugene)

Changes for 1.1:
