@@ -1,5 +1,6 @@
 Changes for 1.3:
 
+ - developed template unlinking feature (Eugene) 
  - added support of "ayatem.swap.out" key for Linux with kernel 2.4 (Eugene)
  - added support of "ayatem.swap.in" key for Linux with kernel 2.4 (Eugene)
  - fixed "web.page.*" keys (Eugene)
